# quill-v4

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
database/: Cargo.toml
database/src/: lib.rs
diagnostic/: Cargo.toml
diagnostic/src/: lib.rs
feather/: Cargo.toml
feather/src/: main.rs
feather_grammar/: grammar.js  package-lock.json  package.json
feather_grammar/bindings/node/: index.js
feather_grammar/bindings/rust/: lib.rs
feather_parser/: Cargo.toml
feather_parser/src/: lib.rs
fexpr/: Cargo.toml
fexpr/src/: lib.rs
fgrammar/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
fgrammar/bindings/node/: binding.cc
files/: Cargo.toml
files/src/: lib.rs
formatter/: Cargo.toml  README.md
formatter/src/: atom_collection.rs  configuration.rs  error.rs  feather.scm  language.rs  lib.rs  main.rs  tree_sitter.rs
kernel/: Cargo.toml
kernel/src/: definition.rs  expr.rs  lib.rs  vec_map.rs
kernel/src/expr/: basic.rs  find_replace.rs  mod.rs  util.rs
kernel/src/type_check/: defeq.rs  definition.rs  mod.rs  unfold.rs  whnf.rs
test/: test.ftr
