[package]
name = "feather"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { version = "0.0.0", path = "../database" }
diagnostic = { version = "0.0.0", path = "../diagnostic" }
feather-parser = { version = "0.0.0", path = "../feather_parser" }
files = { version = "0.0.0", path = "../files" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
