[package]
name = "feather-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostic = { version = "0.0.0", path = "../diagnostic" }
files = { version = "0.0.0", path = "../files" }
miette = "5.9.0"
thiserror = "1.0.40"
tree-sitter = "~0.20.10"
tree-sitter-feather = { version = "0.0.1", path = "../feather_grammar" }
