[package]
name = "feather-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostic = { version = "0.0.0", path = "../diagnostic" }
files = { version = "0.0.0", path = "../files" }
kernel = { version = "0.0.0", path = "../kernel" }
miette = "5.9.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
thiserror = "1.0.40"
tracing = "0.1.37"
tree-sitter = "~0.20.10"
tree-sitter-feather = { version = "0.0.1", path = "../feather_grammar" }
upcast = "0.1.0"
