[package]
name = "formatter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
log = "0.4.19"
pretty_assertions = "1.3.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tree-sitter-facade = { version = "0.9.3", git = "https://github.com/tweag/tree-sitter-facade" }
tree-sitter-feather = { version = "0.0.1", path = "../feather_grammar" }
