[package]
name = "formatter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tree-sitter-facade = { version = "0.9.3", git = "https://github.com/tweag/tree-sitter-facade" }
tree-sitter-feather = { version = "0.0.1", path = "../feather_grammar" }
